--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,7 @@
 APP_ENV=development
 APP_DEBUG=true
 APP_URL=http://localhost/desa-juara/backend/public
+APP_DESA_ID=1
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
@@ -9,6 +10,3 @@ DB_DATABASE=desa_juara
 DB_USERNAME=root
 DB_PASSWORD=
 
-SUPABASE_URL=
-SUPABASE_SERVICE_ROLE_KEY=
-SUPABASE_ANON_KEY=
